[workspace]
resolver = "2"

members = [
    "crates/*"
]

[workspace.package]
name = "j4fsmb"
version = "0.0.1"
authors = ["squeakbug <squeakbug73@outlook.com>"]
edition = "2021"

[workspace.dependencies]
tokio = { version = "1.41.1", features = ["full"] }
j4fsmb-parser = { path = "crates/j4fsmb_parser" }

[profile.release]
lto = true