[workspace]
resolver = "2"

members = [
    "crates/*"
]

[workspace.package]
name = "j4fsmb"
version = "0.0.1"
authors = ["squeakbug <squeakbug73@outlook.com>"]
edition = "2021"

[workspace.dependencies]
tokio = "1.41.1"
j4fsmb-client = { path = "crates/j4fsmb_client" }
j4fsmb-server = { path = "crates/j4fsmb_server" }

[profile.release]
lto = true