[package]
name = "j4fsmb-server"
version = "0.0.1"
authors = ["squeakbug <squeakbug73@outlook.com>"]
edition = "2021"

[dependencies]
j4fsmb-parser.workspace = true
chrono = "0.4.38"
tokio.workspace = true
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rust-kbkdf = "1.1.0"
toml = "0.8.19"
dotenv = "0.15.0"
cmac = "0.7.2"
hmac = "0.12.1"
sha2 = "0.10.8"
aes = "0.8.4"
serde = "1.0.215"
serde_derive = "1.0.215"
anyhow.workspace = true